# minim-pd

./: .gitignore  .gitmodules  Makefile  Makefile.pdlibbuilder  README.md  bank.cpp  bank.h  bank_tilde.pd  bank~.cpp  bank~.h  bug.txt  clean.pd  cpp.cpp  cpp.h  cpp.pd  gated.pd  inter.h  m_pd.h  mapper.cpp  mapper.h  mapper.pd  one.cpp  one.hpp  one.pd_darwin  package-lock.json  plonk~.cpp  plonk~.h  rc505.pd  states.txt  tests.pd  ticker.cpp  ticker.h
hardware/: hardware.ino  io.cpp  minim.cpp  minim_hw.ino  selftest.cpp
hardware/api/: BufferPainter.cpp  ControlSurfaceAPI5.cpp  DisplayList.cpp  GraphicsResponder.cpp  api.h  cmd.cpp  cmd.h  friend.h  gfx.cpp  gfx.h  libdarray.h  responder.h  surface.h
hardware/docs/: api.md  layout.md
hardware/emuForge/: .gitignore  package.json  webpack.main.config.js  (+2 more)
host_hw/: config.txt  motifaudio.dtbo  motifaudioio.dts
minim/: CMakeLists.txt  emu_setup.sh  emu_setup_mingw.sh
minim/include/: minim.h
minim/res/: main.pd
minim/src/: audio.cpp  gfx.cpp  main.cpp
minim_emu/: CMakeLists.txt
minim_hw/: api.md  gfx.cpp  gfx.h  io.cpp  io.h  libdarray.h  midi.cpp  minim_hw.ino  oled.cpp
misc/: motif.h  one.cpp  one.hpp  oscc~.c
patches/: arrows.txt  bank2.pd  bank_debug.pd  bank_oled.pd  bank_tilde-help.pd  bank_tilde.pd  control test.pd  img16.txt  img20.txt  img34.txt  img8.txt  midi_sysex.pd  oled_test.pd  status_icons.txt
puredata/: .gitignore  Makefile
server/: CMakeLists.txt  emu_build_mingw.sh  emu_setup.sh  emu_setup_mingw.sh
src/: bank~.cpp  oled.cpp  ticker.cpp
txt_creator/: README.md
(+120 files in other folders)
